# disputepilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  config.py  fixture_loader.py  init.py  main.py  models.py  pipeline.py  redaction.py  telegram_approval.py  telegram_callback_audit.py  telegram_loop.py  telegram_preview.py  uipath_integration.py  uipath_preview.py  workflow_preview.py
demo-data/: debt-dispute-deadline.md  job-opportunity-reply-needed.md  service-billing-escalation.md
demo-data/cases/: DP-CREDIT-001_retail_credit_bureau_correction.json  DP-DEBT-001_telco_collector_response_deadline.json  DP-GAM-001_duplicate_bet_system_error.json  DP-GAM-002_refund_approved_not_reflected.json  DP-INS-001_device_claim_repudiation.json  DP-SVC-001_router_paid_not_delivered.json
docs/: agent-status-contract.md  architecture.md  case-lifecycle.md  core-modules.md  devpost-draft.md  gmail-label-dispute-map.md  product-direction.md  submission-plan.md  submission-ready-runbook.md
tests/: test_api.py  test_fixture_loader.py  test_json_fixtures.py  test_pipeline_and_previews.py  test_telegram_loop.py  test_uipath_integration.py
